--- a/estagioSupervisionado-master/package.json
+++ b/estagioSupervisionado-master/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@types/styled-components": "^5.1.34",
     "cors": "^2.8.5",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
+    "react-select": "^5.8.3",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
